--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protfolio website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio-Home</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
      <div class="navigation">
@@ -14,7 +15,7 @@
          </div>
          <div class="navLink">
              <ul>
-                 <li><a href="#" class="home">Home</a></li>
+                 <li><a href="#">Home</a></li>
                  <li><a href="#">About</a></li>
                  <li><a href="#">Servise</a></li>
                  <li><a href="#">Protfolio</a></li>
@@ -28,7 +29,30 @@
             <div class="toggle"></div>
             <a href="#" class="btn">Hire Me</a>
         </header>
-     </section>
-     <script src="script.js"></script>
+             <!-- ======================================= -->
+        <div class="imgbox">
+            <img src="img/me.jpg" alt="" class="cover" >
+       </div>
+       <div class="home-content">
+           <h2>Hi, I am <br><span>Towker Ahmmed Joy</span></h2>
+           <span class="typejs-title" >I am expart on :</span><span id="type_2"></span><br>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quod earum odit. Est ex cumque laudantium id. Eos atque non nihil corporis quibusdam placeat doloremque reprehenderit, mollitia sit praesentium! Eligendi. </p>
+           <a href="#" class="btn">CV Download</a>
+       </div>
+       <footer>
+           <ul class="footer-icon">
+               <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+               <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+               <li><a href="#"><ion-icon name="logo-github"></ion-icon></a></li>
+           </ul>
+       </footer>
+
+
+
+       <!-- JS File -->
+       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+       <script src="js/type.js"></script>
+     <script src="js/script.js"></script>
 </body>
 </html>
