--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
      <section class="sec">
         <header>
             <div class="toggle"></div>
+            <div>
+                <ion-icon name="moon-outline" class="darkMood"></ion-icon>
+                
+            </div>
             <a href="#" class="btn">Hire Me</a>
         </header>
              <!-- ======================================= -->
@@ -41,9 +45,9 @@
        </div>
        <footer>
            <ul class="footer-icon">
-               <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-               <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-               <li><a href="#"><ion-icon name="logo-github"></ion-icon></a></li>
+               <li><a href="#" class="forDark"><ion-icon name="logo-facebook"></ion-icon></a></li>
+               <li><a href="#" class="forDark2"><ion-icon name="logo-instagram"></ion-icon></a></li>
+               <li><a href="#" class="forDark3"><ion-icon name="logo-github"></ion-icon></a></li>
            </ul>
        </footer>
 
